force-app/main/default/objects/Activity/fields/Activity_Custom_field_5__c.field-meta.xml
<CustomField>
    <fullName>Activity_Custom_field_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Custom field 5</label>
    <type>Checkbox</type>
</CustomField>