force-app/main/default/objects/Activity/fields/Activity_Field__c.field-meta.xml
<CustomField>
    <fullName>Activity_Field__c</fullName>
    <label>Activity Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Value2</fullName>
            </value>
            <value>
                <fullName>Value3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>