force-app/main/default/objects/Activity/fields/check_formula__c.field-meta.xml
<CustomField>
    <fullName>check_formula__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check formula</label>
    <type>Checkbox</type>
</CustomField>